# rust-miner

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
src/: hash.rs  main.rs
