[package]
name = "miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
kernels = ["cuda_builder", "nvvm", "rustc_codegen_nvvm"]

[dependencies]
rand = "0.8.5"
bincode = "1.3.3"
serde = { version = "1.0.63", features = ["derive"] }
cust = "0.3.2"

[build-dependencies.cuda_builder]
version = "0.3.0"
optional = true

[build-dependencies.nvvm]
version = "0.1.1"
optional = true

[build-dependencies.rustc_codegen_nvvm]
version = "0.3.0"
optional = true
